--- a/day1.ipynb
+++ b/day1.ipynb
@@ -30,8 +30,7 @@
     "    val = int(digits[0] + digits[-1])\n",
     "    sum += val\n",
     "    \n",
-    "sum         \n",
-    "    "
+    "sum         "
    ]
   },
   {
