Clean up day 7 part 2

--- a/07/aoc.ipynb
+++ b/07/aoc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -99,29 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hand_type(h):\n",
+    "    types = [(5,), (4,), (3,2), (3,), (2,2), (2,), (1,)]\n",
     "    c = Counter(h)\n",
-    "    counts = [v for k,v in c.items() if k != 'J']\n",
-    "    jcount = c.get('J', 0)\n",
-    "    if len(counts) == 0 or (jcount + max(counts) == 5):\n",
-    "        return 0\n",
-    "    elif jcount + max(counts) == 4:\n",
-    "        return 1\n",
-    "    elif (3 in counts and 2 in counts) or (Counter(counts).get(2, 0) == 2 and jcount == 1):\n",
-    "        return 2\n",
-    "    elif jcount + max(counts) == 3:\n",
-    "        return 3\n",
-    "    elif Counter(counts).get(2, 0) == 2:\n",
-    "        return 4\n",
-    "    elif 2 in counts or 'J' in c:\n",
-    "        return 5\n",
-    "    else:\n",
-    "        return 6\n",
-    "    \n",
+    "    counts = sorted([v for k,v in c.items() if k != 'J'], reverse=True) + [0]\n",
+    "    counts[0] += c.get('J', 0)\n",
+    "    count_counts = Counter(counts)\n",
+    "    def check_type(t):\n",
+    "        return Counter(t) <= count_counts\n",
+    "    for i, t in enumerate(types):\n",
+    "        if check_type(t):\n",
+    "            return i\n",
+    "\n",
     "values =         'AKQT98765432J'\n",
     "value_ordering = 'ABCDEFGHIJKLM'\n",
     "o = {v: i for v, i in zip(values, value_ordering)}\n",
@@ -131,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -145,6 +138,13 @@
    "source": [
     "score_hands(hands)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
