--- a/15/lens_library.ipynb
+++ b/15/lens_library.ipynb
@@ -2,18 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "def ints_in_line(s):\n",
-    "    return list(map(int, re.findall(r\"\\d+\", s)))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
@@ -25,10 +13,7 @@
     "    input = f.read()\n",
     "\n",
     "input = input.replace('\\n', '')\n",
-    "words = [p.strip() for p in input.split(',')]\n",
-    "# print(words)\n",
-    "# print(m)\n",
-    "# print(patterns)"
+    "words = [p.strip() for p in input.split(',')]"
    ]
   },
   {
